--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form name="contact" netlify>
+    <form name="contact" netlify action="/thankyou.html">
         <p>
           <label>Name <input type="text" name="name" /></label>
         </p>
