--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1>Submit file</h1>
-      <form method="POST" data-netlify="true" action="/thankyou.html">
+      <form netlify action="/thankyou.html">
         <div class="form-control">
             <input type="text" required>
             <label>Name</label>
