--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
 
         <div class="form-control">
-          <input type="file" name="file">
+            <input type="file" name="file" style="font-size: 15px; ">
         </div>
 
-        <button class="btn" type="submit">Submit</button>
+        <button class="btn" type="submit" style="font-size: 20px">Submit</button>
       </form>
       <p class="text"><a href="#">Home</a> </p>
     </div>
