--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="form-control">
-            <input type="file" name="file" style="font-size: 15px; ">
+            <input type="file" name="file" style="font-size: 15px;" required>
         </div>
 
         <button class="btn" type="submit" style="font-size: 20px">Submit</button>
