--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1>Submit file</h1>
-      <form name="contact" method="POST" data-netlify="true" enctype="multipart/form-data" action="/thankyou.html">
+      <form name="contact" method="POST" data-netlify="true" enctype="multipart/form-data" data-netlify-recaptcha="true" netlify-honeypot="bot-field" action="/thankyou.html">
         <div class="form-control">
             <input type="text" name="name" required>
             <label>Name</label>
@@ -23,8 +23,20 @@
             <input type="file" name="file" style="font-size: 15px;">
         </div>
 
+        <p style="position: absolute; left: -10000px; opacity: 0; height: 0; overflow: hidden;">
+            <label>
+              Don not fill this out: <input name="bot-field" />
+            </label>
+        </p>
+
         <button class="btn" type="submit" style="font-size: 20px">Submit</button>
+
+        </p>
+            <div data-netlify-recaptcha="true"></div>
+        <p>
+
       </form>
+
       <p class="text"><a href="#">Home</a> </p>
     </div>
     <script src="script.js"></script>
