--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     netlifyIdentity.on("login", user => {
       console.log("Logged in:", user);
-      window.location.href = "/form.html";
+      window.location.href = "/form";
     });
 
     netlifyIdentity.on("logout", () => {
