--- a/form.html
+++ b/form.html
@@ -36,7 +36,7 @@
 
       </form>
 
-      <p class="text"><a href="#">Home</a> </p>
+      <p class="text"><a href="/">Home</a></p>
     </div>
     <script src="script.js"></script>
   </body>
