--- a/blobs.html
+++ b/blobs.html
@@ -43,6 +43,9 @@
   <br>
 
   <h2>Last uploaded image:</h2>
-  <img id="latest-image" src="/.netlify/functions/latest-upload" alt="Latest uploaded image" style="max-width: 100%; border: 1px solid #ccc;" />
+  <img id="latest-image" 
+     src="/.netlify/functions/latest-upload" 
+     alt="Latest uploaded image" 
+     style="width: 800px; border: 1px solid #ccc;" />
 </body>
 </html>
