--- a/blobs.html
+++ b/blobs.html
@@ -40,12 +40,8 @@
   </div>
 
   <br>
-  <br>
 
   <h2>Last uploaded image:</h2>
-  <img id="latest-image" 
-     src="/.netlify/functions/latest-upload" 
-     alt="Latest uploaded image" 
-     style="width: 800px; border: 1px solid #ccc;" />
+  <img id="latest-image" src="/.netlify/functions/latest-upload" alt="Latest uploaded image" style="max-width: 100%; border: 1px solid #ccc;" />
 </body>
 </html>
