--- a/blobs.html
+++ b/blobs.html
@@ -36,7 +36,7 @@
 
   <hr />
 
-  <p class="text"><a href="/">Home</a> / <a href="/form.html"> Form </a></p>
+  <p class="text"><a href="/">Home</a> / <a href="/form.html"> Form </a> / <a href="/auth0.html"> Auth0 </a></p>
   </div>
 
   <br>
