--- a/form.html
+++ b/form.html
@@ -62,7 +62,7 @@
         <button class="btn" type="submit" style="font-size: 20px">Submit</button>
       </form>
       
-      <p class="text"><a href="/">Home </a> / <a href="/blobs.html"> Blobs </a></p>
+      <p class="text"><a href="/">Home </a> / <a href="/blobs.html"> Blobs </a> / <a href="/auth0.html"> Auth0 </a></p>
     </div>
     <script src="script.js"></script>
   </body>
