--- a/auth0.html
+++ b/auth0.html
@@ -18,43 +18,66 @@
         .hidden {
             display: none;
         }
+         /* Základný štýl pre container, buttons a text, ak nemáte style.css */
+        .container {
+            background-color: rgba(0, 0, 0, 0.4);
+            padding: 25px 50px;
+            border-radius: 5px;
+        }
+        .btn {
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            background-color: #007bff;
+            color: white;
+            margin-right: 10px;
+        }
+        .btn:hover {
+            background-color: #0056b3;
+        }
+        .text a {
+             color: #007bff;
+             text-decoration: none;
+        }
+         .text a:hover {
+             text-decoration: underline;
+        }
     </style>
 </head>
 <body>
-  <div class="container" style="background-color: rgba(0, 0, 0, 0.4);
-    padding: 25px 50px;
-    border-radius: 5px;">
-    <div class="form-control">
-      <h1>Auth0 login</h1>
-    </div>
-
-    <div id="auth-nav">
-        <button class="btn" id="login-btn">Login</button>
-        <button class="btn" id="logout-btn" class="hidden">Odhlásiť sa</button>
-    </div>
-
-    <div id="user-info" class="hidden">
-        <h2>Informácie o používateľovi:</h2>
-        <p><strong>Meno:</strong> <span id="user-name"></span></p>
-        <p><strong>Email:</strong> <span id="user-email"></span></p>
+    <div class="container">
+        <div class="form-control">
+            <h1>Auth0 login</h1>
         </div>
 
-    <p class="text"><a href="/">Home </a> / <a href="/blobs.html"> Blobs </a> / <a href="/form.html"> Form </a></p>
-    <div id="protected-content">
-        <h2>Táto časť je len pre prihlásených používateľov!</h2>
-        <p>Ak toto vidíte, ste úspešne prihlásení cez Auth0.</p>
+        <div id="auth-nav">
+            <button class="btn" id="login-btn">Login</button>
+            <button class="btn" id="logout-btn" class="hidden">Odhlásiť sa</button>
+        </div>
+
+        <div id="user-info" class="hidden">
+            <h2>Informácie o používateľovi:</h2>
+            <p><strong>Meno:</strong> <span id="user-name"></span></p>
+            <p><strong>Email:</strong> <span id="user-email"></span></p>
+        </div>
+
+        <p class="text"><a href="/">Home </a> / <a href="/blobs.html"> Blobs </a> / <a href="/form.html"> Form </a></p>
+        <div id="protected-content">
+            <h2>Táto časť je len pre prihlásených používateľov!</h2>
+            <p>Ak toto vidíte, ste úspešne prihlásení cez Auth0.</p>
+        </div>
     </div>
-  </div>
+
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 
     <script>
         let auth0Client = null;
 
-        // ==== NASTAVTE SI VLASTNÉ HODNOTY Z VÁŠHO AUTH0 TENANTA A APLIKÁCIE ====
-        // V produkcii by ste mali získať tieto hodnoty z environmentálnych premenných Netlify!
+        // ==== TOTO SÚ ZÁSTUPNÉ TEXTY - NAHRADIA SA POČAS NETLIFY BUILDU ====
         const auth0Config = {
-            domain: process.env.SECRET_AUTH0_DOMAIN, // Napr. dev-xxxxx.eu.auth0.com
-            clientId: process.env.SECRET_AUTH0_CLIENT_ID,     // ID vašej SPA aplikácie v Auth0
+            domain: "__AUTH0_DOMAIN__", // TENTO ZÁSTUPNÝ TEXT BUDE NAHRADENÝ
+            clientId: "__AUTH0_CLIENT_ID__",     // TENTO ZÁSTUPNÝ TEXT BUDE NAHRADENÝ
             authorizationParams: {
                  redirect_uri: window.location.origin // URL, na ktorú sa Auth0 vráti po prihlásení
             }
@@ -70,29 +93,46 @@
 
         // Inicializácia Auth0 klienta
         const configureClient = async () => {
-            auth0Client = await auth0.createAuth0Client(auth0Config);
+             // Kontrola, či sú hodnoty Domain a ClientId nahradené
+            if (auth0Config.domain.startsWith("__AUTH0_") || auth0Config.clientId.startsWith("__AUTH0_")) {
+                console.error("Auth0 Domain or Client ID were not properly replaced during build.");
+                // Môžete tu pridať zobrazenie chyby používateľovi alebo presmerovanie
+                return; // Zastaviť inicializáciu, ak hodnoty nie sú správne
+            }
 
-            // Po inicializácii skontrolujte stav prihlásenia a aktualizujte UI
-            await updateUI();
+            try {
+               auth0Client = await auth0.createAuth0Client(auth0Config);
 
-            // Skontrolujte, či ide o callback z Auth0 (po prihlásení/registrácii)
-            const query = window.location.search;
-            if (query.includes("code=") && query.includes("state=")) {
-                try {
-                    await auth0Client.handleRedirectCallback();
-                    console.log("Redirect callback handled.");
-                    // Odstráňte parametry z URL pre čistejší vzhľad
-                    window.history.replaceState({}, document.title, "/");
-                } catch (e) {
-                    console.error("Error handling redirect callback:", e);
-                }
-                // Aktualizujte UI znova po spracovaní callbacku
+                // Po inicializácii skontrolujte stav prihlásenia a aktualizujte UI
                 await updateUI();
+
+                // Skontrolujte, či ide o callback z Auth0 (po prihlásení/registrácii)
+                const query = window.location.search;
+                if (query.includes("code=") && query.includes("state=")) {
+                    try {
+                        await auth0Client.handleRedirectCallback();
+                        console.log("Redirect callback handled.");
+                        // Odstráňte parametry z URL pre čistejší vzhľad
+                        window.history.replaceState({}, document.title, "/auth0.html"); // Zmeňte '/' na cestu k tejto stránke ak nie je root
+                    } catch (e) {
+                        console.error("Error handling redirect callback:", e);
+                        // V prípade chyby pri spracovaní callbacku môžete tiež zobraziť chybu alebo presmerovať
+                    }
+                    // Aktualizujte UI znova po spracovaní callbacku
+                    await updateUI();
+                }
+            } catch (error) {
+                 console.error("Failed to initialize Auth0 client:", error);
+                // V prípade chyby pri inicializácii (napr. nesprávne konfiguračné údaje)
+                // Môžete tu zobraziť chybovú správu používateľovi
             }
         };
 
+
         // Aktualizácia UI na základe stavu prihlásenia
         const updateUI = async () => {
+            if (!auth0Client) return; // Ensure client is initialized
+
             const isAuthenticated = await auth0Client.isAuthenticated();
 
             if (isAuthenticated) {
@@ -104,7 +144,7 @@
                 userInfoDiv.classList.remove("hidden");
                 protectedContentDiv.style.display = "block"; // Zobraziť chránený obsah
 
-                userNameSpan.textContent = user.name || user.nickname || "Neznáme meno";
+                userNameSpan.textContent = user.name || user.nickname || user.email || "Neznáme meno/email";
                 userEmailSpan.textContent = user.email || "Neznámy email";
 
             } else {
@@ -121,21 +161,37 @@
 
         // Funkcia pre prihlásenie
         const login = async () => {
-            await auth0Client.loginWithRedirect();
+             if (!auth0Client) {
+                 console.error("Auth0 client not initialized.");
+                 return;
+             }
+            try {
+               await auth0Client.loginWithRedirect();
+            } catch (error) {
+                console.error("Login failed:", error);
+            }
         };
 
         // Funkcia pre odhlásenie
         const logout = async () => {
-            await auth0Client.logout({
-                logoutParams: {
-                    returnTo: window.location.origin // URL, na ktorú sa vráti po odhlásení
-                }
-            });
+            if (!auth0Client) return; // Ensure client is initialized
+            try {
+               await auth0Client.logout({
+                   logoutParams: {
+                       returnTo: window.location.origin // URL, na ktorú sa vráti po odhlásení
+                   }
+               });
+            } catch (error) {
+                 console.error("Logout failed:", error);
+            }
         };
 
         // Pridanie poslucháčov na tlačidlá
-        loginBtn.addEventListener("click", login);
-        logoutBtn.addEventListener("click", logout);
+        // Pridávame poslucháčov až po inicializácii klienta
+        // (alebo sa uistíme, že funkcie login/logout kontrolujú null klienta)
+         loginBtn.addEventListener("click", login);
+         logoutBtn.addEventListener("click", logout);
+
 
         // Konfigurácia klienta pri načítaní stránky
         configureClient();
