--- a/auth0.html
+++ b/auth0.html
@@ -10,7 +10,7 @@
             margin-bottom: 20px;
         }
         #protected-content {
-            display: none; 
+            display: none;
             border: 1px solid #ccc;
             padding: 15px;
             margin-top: 20px;
@@ -18,6 +18,7 @@
         .hidden {
             display: none;
         }
+         /* Základný štýl pre container, buttons a text, ak nemáte style.css */
         .container {
             background-color: rgba(0, 0, 0, 0.4);
             padding: 25px 50px;
@@ -62,120 +63,171 @@
         </div>
 
         <p class="text"><a href="/">Home </a> / <a href="/blobs.html"> Blobs </a> / <a href="/form.html"> Form </a></p>
+
+        <div id="protected-content">
+            <h2>Táto časť je len pre prihlásených používateľov!</h2>
+            <p>Ak toto vidíte, ste úspešne prihlásení cez Auth0.</p>
+        </div>
+
     </div>
+
 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 
     <script>
-        let auth0Client = null;
+        // Spustí kód až po načítaní celého DOM
+        window.addEventListener("DOMContentLoaded", async () => {
 
-        // ==== TOTO SÚ ZÁSTUPNÉ TEXTY - NAHRADIA SA POČAS NETLIFY BUILDU ====
-        const auth0Config = {
-            domain: "__AUTH0_DOMAIN__", // TENTO ZÁSTUPNÝ TEXT BUDE NAHRADENÝ
-            clientId: "__AUTH0_CLIENT_ID__",     // TENTO ZÁSTUPNÝ TEXT BUDE NAHRADENÝ
-            authorizationParams: {
-                 redirect_uri: window.location.origin + "/auth0.html" 
-            }
-        };
-        // ==================================================================
+            let auth0Client = null;
 
-        const loginBtn = document.getElementById("login-btn");
-        const logoutBtn = document.getElementById("logout-btn");
-        const userInfoDiv = document.getElementById("user-info");
-        const userNameSpan = document.getElementById("user-name");
-        const userEmailSpan = document.getElementById("user-email");
-        const protectedContentDiv = document.getElementById("protected-content");
-
-        const configureClient = async () => {
-            if (auth0Config.domain.startsWith("__AUTH0_") || auth0Config.clientId.startsWith("__AUTH0_")) {
-                console.error("Auth0 Domain or Client ID were not properly replaced during build.");
-                return; 
-            }
-
-            try {
-               auth0Client = await auth0.createAuth0Client(auth0Config);
-
-                await updateUI();
-
-                const query = window.location.search;
-                if (query.includes("code=") && query.includes("state=")) {
-                    try {
-                        await auth0Client.handleRedirectCallback();
-                        console.log("Redirect callback handled.");
-                        window.history.replaceState({}, document.title, "/auth0.html"); 
-                    } catch (e) {
-                        console.error("Error handling redirect callback:", e);
-                    }
-                    await updateUI();
+            // ==== TOTO SÚ ZÁSTUPNÉ TEXTY - NAHRADIA SA POČAS NETLIFY BUILDU ====
+            const auth0Config = {
+                domain: "__AUTH0_DOMAIN__", // TENTO ZÁSTUPNÝ TEXT BUDE NAHRADENÝ
+                clientId: "__AUTH0_CLIENT_ID__",     // TENTO ZÁSTUPNÝ TEXT BUDE NAHRADENÝ
+                authorizationParams: {
+                     redirect_uri: window.location.origin + "/auth0.html"
                 }
-            } catch (error) {
-                 console.error("Failed to initialize Auth0 client:", error);
-            }
-        };
+            };
+            // ==================================================================
+
+            // Získavame referencie na DOM prvky AŽ PO ODPÁLENÍ DOMContentLoaded
+            const loginBtn = document.getElementById("login-btn");
+            const logoutBtn = document.getElementById("logout-btn");
+            const userInfoDiv = document.getElementById("user-info");
+            const userNameSpan = document.getElementById("user-name");
+            const userEmailSpan = document.getElementById("user-email");
+            const protectedContentDiv = document.getElementById("protected-content"); // <--- Teraz by už nemal byť null
 
 
-        const updateUI = async () => {
-            if (!auth0Client) return; 
+            // === Presunuté definície funkcií login a logout - SÚ PRED ICH POUŽITÍM ===
+            const login = async () => {
+                 if (!auth0Client) {
+                     console.error("Auth0 client not initialized.");
+                     return;
+                 }
+                try {
+                   await auth0Client.loginWithRedirect();
+                } catch (error) {
+                    console.error("Login failed:", error);
+                }
+            };
 
-            const isAuthenticated = await auth0Client.isAuthenticated();
-
-            if (isAuthenticated) {
-                const user = await auth0Client.getUser();
-                console.log("Používateľ prihlásený:", user);
-
-                loginBtn.classList.add("hidden");
-                logoutBtn.classList.remove("hidden");
-                userInfoDiv.classList.remove("hidden");
-                protectedContentDiv.style.display = "block"; 
-
-                userNameSpan.textContent = user.name || user.nickname || user.email || "Neznáme meno/email";
-                userEmailSpan.textContent = user.email || "Neznámy email";
-
-            } else {
-                console.log("Používateľ odhlásený.");
-                loginBtn.classList.remove("hidden");
-                logoutBtn.classList.add("hidden");
-                userInfoDiv.classList.add("hidden");
-                protectedContentDiv.style.display = "none"; 
-
-                userNameSpan.textContent = "";
-                userEmailSpan.textContent = "";
-            }
-        };
+            const logout = async () => {
+                if (!auth0Client) return;
+                try {
+                   await auth0Client.logout({
+                       logoutParams: {
+                           returnTo: window.location.origin + "/auth0.html"
+                       }
+                   });
+                } catch (error) {
+                     console.error("Logout failed:", error);
+                }
+            };
+            // ===========================================================================
 
 
-        const login = async () => {
-             if (!auth0Client) {
-                 console.error("Auth0 client not initialized.");
-                 return;
-             }
-            try {
-               await auth0Client.loginWithRedirect();
-            } catch (error) {
-                console.error("Login failed:", error);
-            }
-        };
+            // Pridanie poslucháčov na tlačidlá - TERAZ VIEME, ŽE FUNKCIE LOGIN/LOGOUT EXISTUJÚ
+             // Pridávame poslucháčov AŽ vo vnútri DOMContentLoaded
+             if (loginBtn) loginBtn.addEventListener("click", login); // Pridaná kontrola existencie pre istotu
+             if (logoutBtn) logoutBtn.addEventListener("click", logout); // Pridaná kontrola existencie pre istotu
 
 
-        const logout = async () => {
-            if (!auth0Client) return; 
-            try {
-               await auth0Client.logout({
-                   logoutParams: {
-                       returnTo: window.location.origin + "/auth0.html"
-                   }
-               });
-            } catch (error) {
-                 console.error("Logout failed:", error);
-            }
-        };
+            const configureClient = async () => {
+                // Tento check na placeholder by mal zlyhať LEN AK sed nefunguje
+                 if (auth0Config.domain.startsWith("__AUTH0_") || auth0Config.clientId.startsWith("__AUTH0_")) {
+                     console.error("FATAL ERROR: Auth0 Domain or Client ID were not properly replaced during build.");
+                     // Tu by ste mali zobraziť používateľovi jasnú chybu namiesto tichého zlyhania
+                     document.body.innerHTML = "<h1>Chyba konfigurácie!</h1><p>Prosím, kontaktujte administrátora webu. Konfigurácia prihlásenia zlyhala.</p>";
+                     return; // Zastaví vykonávanie configureClient
+                 }
+
+                try {
+                   auth0Client = await auth0.createAuth0Client(auth0Config);
+
+                    // Toto prvé volanie nastaví UI pri bežnom načítaní (bez code/state)
+                    await updateUI();
+
+                    // Skontrolujte, či ide o callback z Auth0 (po prihlásení/registrácii)
+                    const query = window.location.search;
+                    if (query.includes("code=") && query.includes("state=")) {
+                        console.log("Spracúvam callback z Auth0...");
+                        try {
+                            await auth0Client.handleRedirectCallback(); // <--- Spracovanie presmerovania
+                            console.log("Callback spracovaný úspešne.");
+                            // Vyčisti URL - použi window.location.pathname pre zachovanie cesty
+                            window.history.replaceState({}, document.title, window.location.pathname);
+                        } catch (e) {
+                            console.error("Chyba pri spracovaní Auth0 callbacku:", e);
+                             // Zobraziť používateľovi chybu pri callbacku
+                             alert("Chyba pri prihlasovaní. Prosím, skúste to znova. Detaily: " + e.message);
+                        }
+                        // Po spracovaní callbacku (či už úspešnom alebo s chybou) aktualizuj UI
+                        await updateUI(); // <--- Toto by malo aktualizovať UI na prihlásený stav
+                    }
+
+                } catch (error) {
+                    console.error("Nepodarilo sa inicializovať Auth0 klienta:", error);
+                     // Zobraziť používateľovi chybu pri inicializácii
+                     alert("Nepodarilo sa nastaviť prihlásenie. Prosím, kontaktujte administrátora.");
+                }
+            };
 
 
-         loginBtn.addEventListener("click", login);
-         logoutBtn.addEventListener("click", logout);
+            const updateUI = async () => {
+                 console.log("Aktualizujem UI...");
+                 // Kontrola, či je klient inicializovaný (mala by byť, ak nebola chyba v configureClient)
+                if (!auth0Client) {
+                    console.error("updateUI: Auth0 klient nie je inicializovaný.");
+                    // Skryť všetko prihlásené UI
+                    loginBtn.classList.remove("hidden");
+                    if (logoutBtn) logoutBtn.classList.add("hidden"); // Kontrola existencie
+                    if (userInfoDiv) userInfoDiv.classList.add("hidden"); // Kontrola existencie
+                    if (protectedContentDiv) protectedContentDiv.style.display = "none"; // Kontrola existencie
+                    return;
+                }
+
+                const isAuthenticated = await auth0Client.isAuthenticated();
+                console.log("updateUI: Používateľ autentifikovaný:", isAuthenticated);
 
 
-        configureClient();
+                if (isAuthenticated) {
+                    const user = await auth0Client.getUser();
+                    console.log("updateUI: Získané info o používateľovi:", user);
+
+                    // Zobraziť prihlásené prvky
+                    if (loginBtn) loginBtn.classList.add("hidden"); // Kontrola existencie
+                    if (logoutBtn) logoutBtn.classList.remove("hidden"); // Kontrola existencie
+                    if (userInfoDiv) userInfoDiv.classList.remove("hidden"); // Kontrola existencie
+                    if (protectedContentDiv) { // Kontrola existencie
+                         protectedContentDiv.style.display = "block";
+                     }
+
+
+                    if (userNameSpan) userNameSpan.textContent = user.name || user.nickname || user.email || "Neznáme meno/email"; // Kontrola existencie
+                    if (userEmailSpan) userEmailSpan.textContent = user.email || "Neznámy email"; // Kontrola existencie
+
+                } else {
+                    // Zobraziť odhlásené prvky
+                    console.log("updateUI: Používateľ nie je autentifikovaný.");
+                    if (loginBtn) loginBtn.classList.remove("hidden"); // Kontrola existencie
+                    if (logoutBtn) logoutBtn.classList.add("hidden"); // Kontrola existencie
+                    if (userInfoDiv) userInfoDiv.classList.add("hidden"); // Kontrola existencie
+                    if (protectedContentDiv) { // Kontrola existencie
+                         protectedContentDiv.style.display = "none";
+                    }
+
+
+                    if (userNameSpan) userNameSpan.textContent = ""; // Kontrola existencie
+                    if (userEmailSpan) userEmailSpan.textContent = ""; // Kontrola existencie
+                }
+            };
+
+
+            // Konfigurácia klienta sa spustí až po DOMContentLoaded
+            configureClient();
+
+        }); // Koniec poslucháča DOMContentLoaded
 
     </script>
 
