--- a/auth0.html
+++ b/auth0.html
@@ -5,45 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auth0 Prihlásenie</title>
     <link rel="stylesheet" href="style.css" />
-    <style>
-        #auth-nav {
-            margin-bottom: 20px;
-        }
-        #protected-content {
-            display: none;
-            border: 1px solid #ccc;
-            padding: 15px;
-            margin-top: 20px;
-        }
-        .hidden {
-            display: none;
-        }
-         /* Základný štýl pre container, buttons a text, ak nemáte style.css */
-        .container {
-            background-color: rgba(0, 0, 0, 0.4);
-            padding: 25px 50px;
-            border-radius: 5px;
-        }
-        .btn {
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            background-color: #007bff;
-            color: white;
-            margin-right: 10px;
-        }
-        .btn:hover {
-            background-color: #0056b3;
-        }
-        .text a {
-             color: #007bff;
-             text-decoration: none;
-        }
-         .text a:hover {
-             text-decoration: underline;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -52,9 +13,9 @@
         </div>
 
         <div id="user-info" class="hidden">
-            <h2>User information</h2>
+            <h2 style="margin-top: 60px;">User information</h2>
        <!-- <p><strong>Name:</strong> <span id="user-name"></span></p> -->
-            <p><strong>Email: </strong> <span id="user-email"></span></p>
+            <p style="margin-bottom:40px;margin-top: 25px;"><strong>Email: </strong> <span id="user-email"></span></p>
         </div>
 
         <div id="auth-nav">
@@ -70,7 +31,7 @@
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 
     <script>
-        // Spustí kód až po načítaní celého DOM
+
         window.addEventListener("DOMContentLoaded", async () => {
 
             let auth0Client = null;
