--- a/auth0.html
+++ b/auth0.html
@@ -5,6 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auth0 Prihlásenie</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+        #auth-nav {
+            margin-bottom: 20px;
+        }
+        #protected-content {
+            display: none;
+            border: 1px solid #ccc;
+            padding: 15px;
+            margin-top: 20px;
+        }
+        .hidden {
+            display: none;
+        }
+        .container {
+            background-color: rgba(0, 0, 0, 0.4);
+            padding: 25px 50px;
+            border-radius: 5px;
+        }
+        .btn {
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            background-color: #4f98e7;
+            color: white;
+            margin-right: 10px;
+        }
+        .btn:hover {
+            background-color: #0056b3;
+        }
+        .text a {
+             color: #4595e9;
+             text-decoration: none;
+        }
+         .text a:hover {
+             text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
