--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   border-radius: 5px;">
 
   <div class="form-control">
-    <h1>Identity login</h1>
+    <h1 data-netlify-editor-content="headline">Identity login</h1>
   </div>
 
 
   <button class="btn" id="login-btn">Login</button>
   <button class="btn" id="logout-btn" style="display:none;">Logout</button>
-  <p class="text"><a href="/form.html"> Form </a> / <a href="/blobs.html"> Blobs </a> / <a href="/auth0.html"> Auth0 </a></p>
+  <p data-netlify-editor-content="paragraph" class="text"><a href="/form.html"> Form </a> / <a href="/blobs.html"> Blobs </a> / <a href="/auth0.html"> Auth0 </a></p>
 
   <!-- Netlify Identity Widget -->
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
